# Algorithmic-Trading-Platform

./: .gitmodules  Backtest.cpp  CMakeLists.txt  Exchange.cpp  MACD, ATR, BB.cpp  MACD, ATR, BB.h  README.md  SMA Crossovers.cpp  SMA Crossovers.h  backtest.cpp  build.bat  demo.cpp
src/: Backtest.cpp  Backtest.h  BearishEngulfing.cpp  BullishEngulfing.cpp  CMakeLists.txt  Demo.cpp  Exchange.cpp  Exchange_3_threads  Exchange_3_threads.cpp  Exchange_manual+3bots.cpp  Hammer.cpp  HangingMan.cpp  MACD, ATR, BB.cpp  MACD, ATR, BB.h  OrderBookv2.cpp  OrderBookv3.cpp  RSI_ADX.cpp  RSI_ADX.h  SMA Crossovers.cpp  SMA Crossovers.h  bot2.cpp  candleStick.h  dynamic_graph  gaussianBotV1.cpp  gaussianBotV2.cpp  gaussianbot.cpp  randomBot.cpp
